// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Ghost 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-gIDmLj braPyZ kvKVhE"
  >
    <div
      className="sc-fHeRUh bpoAMN"
    >
      Ghost Buttons
    </div>
    <div
      className="sc-fHeRUh bpoAMN"
    >
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-fKVqWL kJRGFw jsYCsA"
          data-element="button"
          size="medium"
          variant="outline"
        >
          All Behaviours
        </button>
      </div>
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-fKVqWL kJRGFw jsYCsA"
          data-element="button"
          size="medium"
          variant="outline"
        >
          All Tests
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button System 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-gIDmLj braPyZ kvKVhE"
  >
    <div
      className="sc-fHeRUh bpoAMN"
    >
      Rounded Buttons
    </div>
    <div
      className="sc-fHeRUh bpoAMN"
    >
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-kfPuZi eGfBNR bWgxaE"
          color="success"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Good
        </button>
      </div>
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-kfPuZi cdJIFB bWgxaE"
          color="error"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Bad
        </button>
      </div>
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-kfPuZi eVYtgi bWgxaE"
          color="warning"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Mediocre
        </button>
      </div>
      <div
        className="sc-evcjhq jKgMkM"
      >
        <button
          className="sc-dlVxhl sc-kfPuZi cfevsQ bWgxaE"
          color="secondary"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Missing
        </button>
      </div>
    </div>
  </div>
</div>
`;
